# stretch3-zmq

./: .env.example  LICENSE  README.rst  config.yaml  prek.toml  pyproject.toml
docs/: protocols.md
examples/: client.py
notebooks/: 01_control_status_data_collection.ipynb  01_kalman_filter.ipynb
src/stretch3_zmq/core/messages/: command.py  constants.py  orientation.py  protocol.py  status.py  vector_3d.py
src/stretch3_zmq/driver/: __init__.py  __main__.py  config.py
src/stretch3_zmq/driver/asr/: microphone.py  service.py
src/stretch3_zmq/driver/asr/providers/: __init__.py  base.py  deepgram.py  elevenlabs.py  openai.py
src/stretch3_zmq/driver/camera/: __init__.py  arducam.py  base.py  realsense.py
src/stretch3_zmq/driver/control/: __init__.py  robot.py
src/stretch3_zmq/driver/services/: camera.py  command.py  listen.py  speak.py  status.py
src/stretch3_zmq/driver/tts/: __main__.py
src/stretch3_zmq/driver/tts/providers/: base.py  elevenlabs.py  fish_audio.py
src/stretch3_zmq_core/messages/: command.py  constants.py  pose_2d.py
src/stretch3_zmq_driver/: __main__.py  config.py
src/stretch3_zmq_driver/asr/: __init__.py  __main__.py  microphone.py
src/stretch3_zmq_driver/asr/providers/: openai.py
src/stretch3_zmq_driver/camera/: arducam.py  realsense.py
src/stretch3_zmq_driver/control/: robot.py
src/stretch3_zmq_driver/services/: __init__.py  camera.py  command.py  zmq_helpers.py
src/stretch3_zmq_driver/tts/: service.py  speaker.py
src/stretch3_zmq_driver/tts/providers/: __init__.py  elevenlabs.py
tests/: test_asr_service.py  test_command.py  test_config.py  test_constants.py  test_messages.py  test_protocol.py  test_robot.py  test_status.py  test_tts_service.py  test_zmq_helpers.py
